# Vectra

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/api/: README.md  main.py  requirements.txt
apps/api/models/: schemas.py
apps/api/routes/: gcode.py  jobs.py  optimize.py  presets.py  preview.py  process.py  projects.py  upload.py  vectorize.py
apps/api/services/: ingestion.py  job_manager.py  pipeline_job.py  storage.py  vpype_runner.py  vtracer_runner.py
apps/web/: README.md  package-lock.json  package.json  react-dom.d.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: DesignCanvas.tsx
apps/web/lib/: canvas-transform.ts  use-art-transform.ts
core/: tasks.py  urls.py  views.py
docs/: GCODE_MARLIN.md  LIVE_PREVIEW.md  PIPELINE_API.md  PROJECT_PLAN_VECTRA.md  TESTING_MILESTONE_1.md  TESTING_PIPELINE_PERSISTENCE.md  VECTORIZATION.md
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
machines/: admin.py  marlin.py  models.py  serializers.py  urls.py  views.py
machines/migrations/: 0001_initial.py  0002_tool.py
pipeline/: admin.py  apps.py  models.py  registry.py  runner.py  serializers.py  steps.py  tasks.py  urls.py  vectorize.py  views.py  views_saved.py  vpype_utils.py
pipeline/migrations/: 0001_initial.py
preview/: consumers.py  routing.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py
vectra/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
