[project]
name = "vectra"
version = "0.0.1"
description = "Vectra: a slicer-like tool for pen plotters (Django + vpype)"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
  "E", "F", "W", # pycodestyle/pyflakes
  "I",            # isort
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["vectra", "core", "projects"]
